--- a/css/style.css
+++ b/css/style.css
@@ -313,10 +313,11 @@ button:focus {
 
 .nav-menu {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  margin-top: 1.5rem; }
+  max-width: 80%;
+  margin: 1.5rem 0;
+  padding: 0; }
 
 .navbar {
   display: flex;
