--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,10 +7,11 @@
 }
 .nav-menu {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 100%;
-  margin-top: 1.5rem;
+  max-width: 80%;
+  margin: 1.5rem 0;
+  padding: 0;
 }
 
 .navbar {
