--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 80%;
+  // max-width: 100%;
   margin: 1.5rem 0;
   padding: 0;
 }
