--- a/css/style.css
+++ b/css/style.css
@@ -350,14 +350,13 @@ button:focus {
   .nav-menu {
     position: fixed;
     left: -100%;
-    top: 4rem;
+    top: 3rem;
     flex-direction: column;
-    background-color: #263546;
+    background-color: #000;
     width: 100%;
     border-radius: 10px;
     text-align: center;
-    transition: 0.3s;
-    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.2); }
+    transition: 0.3s; }
   .nav-menu.active {
     left: 0%; }
   .nav-item {
@@ -382,7 +381,7 @@ button:focus {
   .grid__title {
     font-size: 1.7rem;
     text-align: left;
-    border-bottom: 1px solid #777;
+    border-bottom: 1px solid #2a2a2a;
     padding: 0.5rem;
     margin: 0 0.5rem 1rem 0; }
     .grid__title--tools {
@@ -396,7 +395,8 @@ button:focus {
     width: 12rem;
     display: flex;
     flex-direction: row;
-    margin: 1rem 0.5rem 0 0.5rem; }
+    margin: 1rem 0.5rem 0 0.5rem;
+    align-items: center; }
   .grid img {
     width: 2.5rem;
     margin-right: 0.5rem; }
