--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,7 +11,7 @@ $color-tertiary-dark: #638efb;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
-$color-grey-dark: #777;
+$color-grey-dark: #2a2a2a;
 $color-white: #fff;
 $color-black: #000;
 
